# workforest

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
tui/: Cargo.toml
tui/src/: event.rs  main.rs  theme.rs
tui/src/windows/: add_agent.rs  add_repo.rs  delete_agent.rs  mod.rs  restart_agent.rs  root.rs  show_repos.rs
