[package]
name = "workforest-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal"] }
workforest-core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
petname = "1.1"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
portable-pty = "0.9.0"
termwiz = "0.23.3"
num-traits = "0.2"
nix = { version = "0.29", features = ["socket", "uio"] }
