[package]
name = "workforest-tui"
version.workspace = true
edition = "2021"

[dependencies]
workforest-core = { path = "../core" }
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tachyonfx = "0.22"
petname = "1.1"
termwiz = "0.23.3"
nix = { version = "0.29", features = ["socket", "uio", "fs"] }
polling = "3.7"
signal-hook = "0.3"
